tests/good/02_simple_bool.src
# Test: Simple boolean return
# Expected: 1
void main() {
    print_bool(true);
}
